base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: petclinic-was-service
  namespace: petclinic
spec:
  selector:
    app: petclinic
    tier: was
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  type: ClusterIP
