base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: petclinic-ingress
  namespace: petclinic
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: #petclinic.example.com  # 선택사항: 도메인 없으면 생략
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: petclinic-was-service
            port:
              number: 8080
